--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -94,7 +94,7 @@
     .hero > img {
       max-width: none;
       width: 100%;
-      height: auto;
+      height: 100%;
       object-fit: none;
       overflow: hidden;
     }
