--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -209,13 +209,11 @@
     #last-seperator{
       display: block;
     }
-    .discover{
-        
-        display: grid;
-        grid-template-columns: repeat(2, 300px);
-        grid-template-rows: 200px;
-        column-gap: 1rem;     
-       
+    .discover {
+        display: flex;
+        flex-direction: column;
     }
-  
-  }
+    .card:hover {
+        box-shadow: 0 8px 16px 0 rgb(80, 79, 79);
+      }
+}
