--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -299,15 +299,31 @@ footer .seperator {
   padding-bottom: .5rem;
   font-size: 0.8rem;
 }
-  .discover{
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-  }
-  .discoverImg{
-      width: 300px;
-      height: 180px;
-      margin:1px;
-      padding: 1rem;
-  }
+.discover-header {
+  display: block;
+  text-align: center;
+}
+.discover img {
+  display: flex;
+  align-content: center;
+  width: 100%;
+}
+.card {
+  box-shadow: 0 4px 8px 0 rgb(209, 192, 192);
+  transition: 0.3s;
+  overflow: hidden;
+  margin: 2%;
+}
+.caption {
+  font-size: 1.2rem;
+  padding: 1rem;
+  text-align: center;
+  margin-top: 2%;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif, serif;;
+}
+.fact {
+  font-size: 1.2rem;
+  padding: 1rem;
+  text-align: center;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif, san-serif;
+}
