--- a/chamber/join/css/small.css
+++ b/chamber/join/css/small.css
@@ -55,7 +55,7 @@ form label.top input, form label.top select form, label.textArea #describe{
   border: solid 1px #999;
   border-radius: 4px;
   padding: .75rem;
-  color: #d5d2d2;
+  color: #060303;
   width: 90%;
   max-width: 350px;
   background-color: rgb(235, 230, 230);
