--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -22,7 +22,93 @@
   --nav-link-color: var(--attention);
 }
 
+/*------ FORM ------*/
 
+form fieldset {
+  margin: 5px auto;
+  border: 1px solid #000000;
+  background-color: #bccaca75;
+  border-radius: 10px;
+  padding: .5rem 2%;
+  text-align: left;
+  max-width: 400px;
+  
+}
+form legend {
+  color: #000000;
+  padding-bottom: 30px;
+  font-size: 1.5em;
+}
+
+
+form label.top, form div {
+  display: block;
+  padding-top: 1rem;
+  color: #060304;
+  font-size: .8rem;
+  
+}
+
+form label.top input, form label.top select form, label.textArea #describe{
+  display: block;
+  font-size: 1rem;
+  border: solid 1px #999;
+  border-radius: 4px;
+  padding: .75rem;
+  color: #000000;
+  width: 90%;
+  max-width: 350px;
+  background-color: rgb(245, 235, 235);
+}
+
+form label.sbs {
+  display: block;
+  padding: 0 .75rem;
+  color: #555;
+  
+}
+form p.sbs {
+  display: block;
+  padding:  .75rem;
+  color: #555;
+  
+}
+
+form input.submitBtn {
+  border: none;
+  background-color: #0017ad;
+  color: white;
+  border-radius: 1rem;
+  padding: .75rem 1.5rem;
+  margin: 0 0 2rem 2%;
+  width: 100%;
+  max-width: 20rem;
+  margin-top: 5px;
+}
+
+form label.top input:required {
+  border-left: red solid 6px;
+}
+
+form label.top input:required:valid {
+  border-left: green solid 6px;
+}
+
+/*------------Thanks-------*/
+.thanks {
+  display: block;
+  text-align: center;
+  background-color: #079c6da7;
+  margin: 0 auto;
+}
+
+/*------------Thanks-------*/
+.thanks_2 {
+  display: block;
+  text-align: center;
+  background-color: #079c6da7;
+  margin: 0 auto;
+}
 
 a:link {
   color: var(--color6);
