--- a/lesson10/css/large.css
+++ b/lesson10/css/large.css
@@ -1,5 +1,16 @@
 @media only screen and (min-width: 60rem) {
 
+    header, footer {
+        max-width: 1200px;
+        margin: 10px auto;
+    }
+
+    .headerLogo {
+        width: 180px;
+        margin-right: 10px;
+        margin-left: 10px;
+        margin-top: 10px;
+    }
 
 .weather {
     margin: 10px 0px;
@@ -19,11 +30,6 @@
 
 .weather h4{
     font-size: 25px;
-}
-
-
-footer div {
-    margin: auto;
 }
 
 }
