--- a/lesson10/css/medium.css
+++ b/lesson10/css/medium.css
@@ -1,5 +1,10 @@
 @media only screen and (min-width: 36rem) {
-    
+
+
+    main {display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        }
+
     .weather {margin: 10px 0px 10px 10px; 
         grid-column: 3;
         grid-row: 5;
