--- a/lesson10/css/small.css
+++ b/lesson10/css/small.css
@@ -1,8 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400&family=Open+Sans&display=swap');
 
+
+
+h1 {
+    color: rgb(234, 233, 239);
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    
+    margin: auto auto auto 10px;
+    
+    font-size: 1.4rem;
+}
+
+
 .weather-api {
     display: block;
-    background-color: #06ccd3a7;
+    background-color: #12a173a7;
     text-align: center;
     justify-content: center;
     margin-top: 200px;
